# Projet_PPIL

./: README.md  rapport.docx  ~$apport.docx  ~WRL0844.tmp
client/: CMakeLists.txt  Croix.cpp  Croix.h  Doxyfile  Forme.cpp  FormeException.cpp  FormeException.h  Formes.h  Rond.cpp  Rond.h  main.cpp
client/chargeurs/: ChargeurCercle.h  ChargeurForme.h  ChargeurFormeComposee.cpp  ChargeurFormeComposee.h  ChargeurPolygone.cpp  ChargeurPolygone.h
client/couleurs/: Couleur.cpp  Couleur.h
client/formes/: Forme.cpp  Forme.h  FormeException.cpp  FormeException.h  Formes.h
client/formes/complexes/: FormeComposee.cpp  FormeComposee.h
client/formes/croix/: Croix.cpp  Croix.h  CroixException.cpp  CroixException.h
client/formes/rond/: Rond.cpp  Rond.h  RondException.cpp  RondException.h
client/formes/simples/: Cercle.cpp  Cercle.h  FormeSimple.cpp  FormeSimple.h  Polygone.cpp  Polygone.h  Segment.cpp  Triangle.cpp  Triangle.h
client/sauvegardes/: SauvegardeTexte.cpp  SauvegardeTexte.h
client/sockets/: Socket.cpp
client/src/: main.cpp
client/src/chargeurs/: ChargeurCercle.cpp  ChargeurCercle.h  ChargeurForme.h  ChargeurFormeComposee.cpp  ChargeurFormeComposee.h  ChargeurPolygone.cpp  ChargeurPolygone.h  ChargeurSegment.cpp  ChargeurSegment.h
client/src/couleurs/: Couleur.cpp  Couleur.h
client/src/formes/: Forme.cpp  Forme.h
client/src/formes/complexes/: FormeComposee.cpp  FormeComposee.h
client/src/formes/simples/: Cercle.cpp  Cercle.h  FormeSimple.cpp  FormeSimple.h  Polygone.cpp  Polygone.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h
client/src/sauvegardes/: Sauvegarde.h  SauvegardeTexte.cpp  SauvegardeTexte.h
client/src/sockets/: Socket.cpp  Socket.h
client/src/surfaces/: Surface.h  SurfaceJava.cpp  SurfaceJava.h
client/src/transformations/: Homothetie.cpp  Homothetie.h  Rotation.cpp  Rotation.h  Transformation.cpp  Transformation.h  Translation.cpp  Translation.h
client/src/vecteurs/: Vecteur2D.cpp  Vecteur2D.h
client/surfaces/: Surface.h  SurfaceJava.cpp  SurfaceJava.h
client/transformations/: Homothetie.cpp  Homothetie.h  Rotation.cpp  Rotation.h  Transformation.cpp  Transformation.h  Translation.h
client/vecteurs/: Vecteur2D.cpp  Vecteur2D.h
doc/client/: _cercle_8cpp.html  _cercle_8h.html  _cercle_8h__dep__incl.map  _cercle_8h__incl.md5  _chargeur_cercle_8cpp.html  _chargeur_cercle_8h.html  _chargeur_cercle_8h_source.html  _chargeur_forme_8h__dep__incl.md5  _chargeur_forme_8h__incl.map  _chargeur_forme_8h__incl.md5  _chargeur_forme_composee_8cpp.html  _chargeur_forme_composee_8cpp__incl.map  _chargeur_forme_composee_8cpp__incl.md5  _chargeur_forme_composee_8h__dep__incl.map  _chargeur_forme_composee_8h__incl.md5  _chargeur_forme_composee_8h_source.html  _chargeur_polygone_8cpp__incl.map  _chargeur_polygone_8cpp__incl.md5  _chargeur_segment_8cpp__incl.map  _chargeur_segment_8cpp__incl.md5  _chargeur_segment_8h.html  _chargeur_segment_8h__dep__incl.map  _chargeur_segment_8h__dep__incl.md5  _chargeur_segment_8h__incl.md5  _chargeur_segment_8h_source.html  _couleur_8cpp.html  _couleur_8cpp.js  _couleur_8cpp__incl.map  _couleur_8h.html  _couleur_8h__dep__incl.map  _couleur_8h__dep__incl.md5  _couleur_8h__incl.map  _forme_8h__dep__incl.map  _forme_8h__incl.md5  _forme_composee_8cpp.html  _forme_composee_8h.html  _forme_composee_8h__incl.md5  _forme_simple_8cpp__incl.map  _forme_simple_8h__incl.map  _forme_simple_8h_source.html  (+136 more)
doc/client/html/: _cercle_8cpp.html  _cercle_8cpp__incl.map  _cercle_8cpp__incl.md5  _cercle_8h.html  _cercle_8h__dep__incl.map  (+519 more)
doc/serveur/: allclasses-noframe.html  help-doc.html  overview-frame.html  overview-summary.html  serialized-form.html
documentation/client/: _cercle_8cpp.js  _cercle_8cpp__incl.md5  _cercle_8h__dep__incl.md5  _cercle_8h_source.html  _chargeur_cercle_8cpp__incl.md5  _chargeur_cercle_8h__incl.map  _chargeur_forme_8h.html  _chargeur_forme_composee_8h.html  _chargeur_forme_composee_8h__dep__incl.md5  _chargeur_forme_composee_8h__incl.map  _chargeur_polygone_8h.html  _chargeur_polygone_8h__dep__incl.map  _chargeur_polygone_8h__incl.md5  _chargeur_segment_8cpp.html  _chargeur_segment_8h__incl.map  _couleur_8cpp__incl.md5  _forme_8cpp.html  _forme_8h.html  _forme_8h__dep__incl.md5  _forme_8h__incl.map  _forme_composee_8cpp__incl.map  _forme_composee_8cpp__incl.md5  _forme_composee_8h__dep__incl.md5  _forme_composee_8h__incl.map  _forme_composee_8h_source.html  _forme_simple_8cpp.html  _forme_simple_8h.html  _homothetie_8cpp.html  _polygone_8cpp.html  _polygone_8cpp__incl.map  _polygone_8cpp__incl.md5  _polygone_8h__incl.map  _rotation_8cpp__incl.map  _rotation_8h__incl.md5  _rotation_8h_source.html  _sauvegarde_8h_source.html  _sauvegarde_texte_8cpp__incl.md5  _sauvegarde_texte_8h__dep__incl.map  _sauvegarde_texte_8h_source.html  _segment_8h__incl.map  (+86 more)
documentation/serveur/: allclasses-frame.html  constant-values.html  deprecated-list.html  index.html  overview-tree.html  package-list
rapport/: rapport-serveur.docx
serveur/: .gitignore  .project
(+135 files in other folders)
